feat: jsnack3 completed with commets

--- a/jsnack3/index.html
+++ b/jsnack3/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <ul id="result"></ul>
+    
+    <div id="result">
+
+    </div>
     
     <!-- custom js -->
     <script src="./functions.js"></script>
